🚀 Switch to JDK 19